// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots customized styles item style 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        style={
          Object {
            "outline": "1px solid red",
          }
        }
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        style={
          Object {
            "outline": "1px solid blue",
          }
        }
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Two item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        style={
          Object {
            "outline": "1px solid green",
          }
        }
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled item 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Enabled
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1l4i2jl=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Enabled
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1l4i2jl=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Disabled
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled links 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1c2ffua=""
        href="https://duck.com"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Enabled
        </span>
      </a>
    </div>
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1l4i2jl=""
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Disabled
        </span>
      </a>
    </div>
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-mka67z=""
        href="https://duck.com"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Enabled
        </span>
      </a>
    </div>
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1l4i2jl=""
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Disabled
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled multiple, all disabled 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1l4i2jl=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Mult 1, disabled
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1l4i2jl=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Mult 2, disabled
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled nested 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Enabled
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={true}
        data-css-1tqc35=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Nested but disabled
        </span>
        <div
          data-css-1li63wi=""
        >
          <svg
            height="9"
            viewBox="0 0 4 9"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 .33l3.657 4.15L0 8.634V.33"
              data-css-c4d79v=""
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots disabled single, disabled 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1l4i2jl=""
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="-1"
      >
        <span
          data-css-3fe0zw=""
        >
          Single, disabled
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots dividers edge 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-shsjok=""
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`Storyshots dividers sandwich 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-shsjok=""
      tabIndex="-1"
    />
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Two item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots link a w/ href 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <a
        aria-haspopup={false}
        data-css-1c2ffua=""
        href="https://duckduckgo.com"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Links to web
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items long text 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item that has text that goes on forever and onward into the universes yet to be
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Another item that takes a long time to explain in the context of everything that is in a line.
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items long text with icon 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-33ggw6=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="channel icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12.5 23h-1a.5.5 0 01-.5-.5v-8.645A3.502 3.502 0 0112 7a3.5 3.5 0 011 6.855V22.5a.5.5 0 01-.5.5zM6.015 3.122A9.482 9.482 0 002.5 10.5a9.476 9.476 0 003.38 7.263.5.5 0 01.078.686l-.605.797a.5.5 0 01-.717.084A11.471 11.471 0 01.5 10.5a11.48 11.48 0 014.321-8.985.272.272 0 01.387.048l.859 1.13a.31.31 0 01-.052.429zM23.5 10.5a11.47 11.47 0 01-3.782 8.526c-.09.081-.209.183-.355.303a.5.5 0 01-.716-.083l-.605-.797a.5.5 0 01.078-.687 8.65 8.65 0 00.285-.245A9.475 9.475 0 0021.5 10.5a9.476 9.476 0 00-3.38-7.263.5.5 0 01-.078-.687l.607-.798a.5.5 0 01.715-.084l.14.118A11.474 11.474 0 0123.5 10.5zM8.316 6.42a4.408 4.408 0 00-.189.175A5.483 5.483 0 006.5 10.5a5.484 5.484 0 001.816 4.08.5.5 0 01.068.678l-.608.8a.5.5 0 01-.724.076A7.48 7.48 0 014.5 10.5a7.48 7.48 0 012.55-5.635.5.5 0 01.726.076l.608.801a.5.5 0 01-.068.678zM19.5 10.5a7.481 7.481 0 01-2.55 5.634.5.5 0 01-.726-.075l-.609-.802a.5.5 0 01.068-.678c.1-.088.18-.164.243-.227A5.483 5.483 0 0017.5 10.5a5.481 5.481 0 00-1.539-3.815 4.948 4.948 0 00-.28-.264.5.5 0 01-.066-.677l.608-.801a.5.5 0 01.724-.077A7.48 7.48 0 0119.5 10.5zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-3fe0zw=""
        >
          One item that has text that goes on forever and onward into the universes yet to be
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items lots 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          0
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          1
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          2
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          3
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          4
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          5
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          6
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          7
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          8
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          9
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          10
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          11
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          12
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          13
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          14
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          15
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          16
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          17
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          18
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          19
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          20
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          21
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          22
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          23
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          24
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          25
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          26
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          27
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          28
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          index: 
          29
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items multiple 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Two item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items null item 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Skip to three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items one 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu items with icons 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-33ggw6=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="channel icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M12.5 23h-1a.5.5 0 01-.5-.5v-8.645A3.502 3.502 0 0112 7a3.5 3.5 0 011 6.855V22.5a.5.5 0 01-.5.5zM6.015 3.122A9.482 9.482 0 002.5 10.5a9.476 9.476 0 003.38 7.263.5.5 0 01.078.686l-.605.797a.5.5 0 01-.717.084A11.471 11.471 0 01.5 10.5a11.48 11.48 0 014.321-8.985.272.272 0 01.387.048l.859 1.13a.31.31 0 01-.052.429zM23.5 10.5a11.47 11.47 0 01-3.782 8.526c-.09.081-.209.183-.355.303a.5.5 0 01-.716-.083l-.605-.797a.5.5 0 01.078-.687 8.65 8.65 0 00.285-.245A9.475 9.475 0 0021.5 10.5a9.476 9.476 0 00-3.38-7.263.5.5 0 01-.078-.687l.607-.798a.5.5 0 01.715-.084l.14.118A11.474 11.474 0 0123.5 10.5zM8.316 6.42a4.408 4.408 0 00-.189.175A5.483 5.483 0 006.5 10.5a5.484 5.484 0 001.816 4.08.5.5 0 01.068.678l-.608.8a.5.5 0 01-.724.076A7.48 7.48 0 014.5 10.5a7.48 7.48 0 012.55-5.635.5.5 0 01.726.076l.608.801a.5.5 0 01-.068.678zM19.5 10.5a7.481 7.481 0 01-2.55 5.634.5.5 0 01-.726-.075l-.609-.802a.5.5 0 01.068-.678c.1-.088.18-.164.243-.227A5.483 5.483 0 0017.5 10.5a5.481 5.481 0 00-1.539-3.815 4.948 4.948 0 00-.28-.264.5.5 0 01-.066-.677l.608-.801a.5.5 0 01.724-.077A7.48 7.48 0 0119.5 10.5zM12 12a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-98yz0a=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="path icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                clipRule="evenodd"
                d="M4.411 9l3.44 3.44a.5.5 0 01.146.353V20.5a.5.5 0 01-.5.5H6.5a.5.5 0 01-.5-.5l-.003-7.086L3 10.417V12.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-5a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v1a.5.5 0 01-.5.5H4.411zM21 10.414l-3 3V20.5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-7.707a.5.5 0 01.146-.353L19.586 9H17.5a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h5a.5.5 0 01.5.5v5a.5.5 0 01-.5.5h-1a.5.5 0 01-.5-.5v-2.086zM12.5 21h-1a.5.5 0 01-.5-.5V4.831L9.528 6.303a.5.5 0 01-.707 0l-.707-.707a.5.5 0 010-.707l3.535-3.535a.5.5 0 01.707 0l3.536 3.535a.5.5 0 010 .707l-.707.707a.5.5 0 01-.707 0L13 4.826V20.5a.5.5 0 01-.5.5z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-3fe0zw=""
        >
          Two item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-98yz0a=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <div
          data-css-18rfdc6=""
        >
          <div
            data-css-7dab2f=""
          >
            <svg
              aria-label="report icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M22 11c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v9h-1v-4c0-.551-.448-1-1-1h-4c-.552 0-1 .449-1 1v4H8v-7c0-.551-.448-1-1-1H3c-.552 0-1 .449-1 1v7H0v2h24v-2h-2v-9zM4 20v-6h2v6H4zm7 0v-3h2v3h-2zm7 0v-8h2v8h-2zM5 9a2 2 0 111.999-2.008l4.002 2.286C11.296 9.106 11.635 9 12 9c.178 0 .347.031.511.074l4.563-4.562A1.997 1.997 0 0117 4a2 2 0 112 2c-.178 0-.348-.029-.512-.073l-4.562 4.562c.043.165.074.333.074.511a2 2 0 01-3.999.01L5.999 8.724A1.976 1.976 0 015 9z"
              />
            </svg>
          </div>
        </div>
        <span
          data-css-3fe0zw=""
        >
          Three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin bottomLeft 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "bottom": 20,
        "left": 20,
        "position": "absolute",
      }
    }
  >
    <div
      data-css-pa9yik=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-17i0oa7=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            One
          </span>
          <div
            data-css-1li63wi=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-mka67z=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            Two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin bottomRight 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "bottom": 20,
        "position": "absolute",
        "right": 20,
      }
    }
  >
    <div
      data-css-spziux=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-17i0oa7=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            One
          </span>
          <div
            data-css-1li63wi=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-mka67z=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            Two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin topLeft 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "left": 20,
        "position": "absolute",
        "top": 20,
      }
    }
  >
    <div
      data-css-1x8y3e3=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-17i0oa7=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            One
          </span>
          <div
            data-css-1li63wi=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-mka67z=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            Two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots nested origin topRight 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "position": "absolute",
        "right": 20,
        "top": 20,
      }
    }
  >
    <div
      data-css-30t3pp=""
      onKeyDown={[Function]}
      role="menu"
    >
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={true}
          data-css-17i0oa7=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            One
          </span>
          <div
            data-css-1li63wi=""
          >
            <svg
              height="9"
              viewBox="0 0 4 9"
              width="4"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 .33l3.657 4.15L0 8.634V.33"
                data-css-c4d79v=""
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        data-css-13azwyo=""
      >
        <button
          aria-haspopup={false}
          data-css-mka67z=""
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseOver={[Function]}
          role="menuitem"
          tabIndex="0"
        >
          <span
            data-css-3fe0zw=""
          >
            Two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots onClick flat 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Two item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots onClick nested 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-1c2ffua=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          0
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={true}
        data-css-1wjctt1=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          1
        </span>
        <div
          data-css-1li63wi=""
        >
          <svg
            height="9"
            viewBox="0 0 4 9"
            width="4"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 .33l3.657 4.15L0 8.634V.33"
              data-css-c4d79v=""
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          2
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          3
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          4
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          5
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          6
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          7
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          8
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          9
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          10
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          11
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          12
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots onClose toggle show/hide 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "margin": "16px",
      }
    }
  >
    <div
      onClick={[Function]}
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "padding": "4px",
        }
      }
    >
      anchor
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          data-css-1x8y3e3=""
          onKeyDown={[Function]}
          role="menu"
        >
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                One item
              </span>
            </button>
          </div>
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                Two item
              </span>
            </button>
          </div>
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                Three item
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots shouldFocusOnMount false 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    data-css-1x8y3e3=""
    onKeyDown={[Function]}
    role="menu"
  >
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          One item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Two item
        </span>
      </button>
    </div>
    <div
      data-css-13azwyo=""
    >
      <button
        aria-haspopup={false}
        data-css-mka67z=""
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseOver={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        <span
          data-css-3fe0zw=""
        >
          Three item
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots with Position BelowLeft 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "margin": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "padding": "4px",
        }
      }
    >
      anchor
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          data-css-1x8y3e3=""
          onKeyDown={[Function]}
          role="menu"
        >
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                One item
              </span>
            </button>
          </div>
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                Two item
              </span>
            </button>
          </div>
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                Three item
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots with Position BelowRight 1`] = `
<div
  data-css-12kxz7c=""
>
  <div
    style={
      Object {
        "float": "right",
        "margin": "16px",
      }
    }
  >
    <div
      style={
        Object {
          "background": "pink",
          "display": "inline-block",
          "padding": "4px",
        }
      }
    >
      anchor
    </div>
    <div
      style={
        Object {
          "visibility": "hidden",
        }
      }
    >
      <div
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <div
          data-css-30t3pp=""
          onKeyDown={[Function]}
          role="menu"
        >
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                One item
              </span>
            </button>
          </div>
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                Two item
              </span>
            </button>
          </div>
          <div
            data-css-13azwyo=""
          >
            <button
              aria-haspopup={false}
              data-css-mka67z=""
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseOver={[Function]}
              role="menuitem"
              tabIndex="0"
            >
              <span
                data-css-3fe0zw=""
              >
                Three item
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
